# rust_jvm

./: .gitignore  ArrayTest.java  Cargo.toml  Hard.java  LICENSE.txt  LambdaTest.java  Makefile.toml  Medium.java  Simple.java  Testing.h  Testing.java  build.rs  readme.md  test.c  test.cpp
class_format/: Cargo.toml
class_format/src/: attributes.rs  class.rs  constant.rs  lib.rs  loader.rs  path.rs  read.rs
class_inspect/: Cargo.toml
class_inspect/src/: main.rs
java/: Cargo.toml  build.rs
java/src/: args.rs  main.rs
java_std/: Cargo.toml  build.rs  test-mapfile
java_std/includes/: jvm_hooks_PrintStreamHook.h
java_std/jvm/hooks/: PrintStreamHook.java
java_std/src/: lib.rs
jvm/: Cargo.toml  build.rs  jvm_symbols.in
jvm/src/: class.rs  constant_pool.rs  exports.rs  jar.rs  lib.rs  version.rs
jvm/src/instruction/: array.rs  class.rs  cmp.rs  convert.rs  general.rs  locals.rs  macros.rs  math.rs  mod.rs  push_const.rs  stack.rs
jvm/src/jvm/: hooks.rs  mod.rs  thread.rs
jvm/src/jvm/call/: callstack_trace.rs  interface.rs  interpreter.rs  mod.rs  native.rs  stack.rs
jvm/src/jvm/internals/: java_unsafe.rs  mod.rs  reflection.rs  thread.rs
jvm/src/jvm/mem/: handle.rs  mod.rs  raw.rs  types.rs
rust_jvm/: Cargo.toml  build.rs  jvm_symbols.in
rust_jvm/java/hooks/: PrintStreamHook.java
rust_jvm/src/: class.rs  exports.rs  jar.rs  lib.rs  va_link_support.c
rust_jvm/src/class/: attribute.rs  class_file.rs  constant.rs  jar.rs  llvm.rs  load.rs  mod.rs  version.rs
rust_jvm/src/instruction/: array.rs  class.rs  cmp.rs  convert.rs  general.rs  info.rs  io.rs  locals.rs  macros.rs  math.rs  mod.rs  push_const.rs  stack.rs
rust_jvm/src/instruction/exec/: array.rs  class.rs  cmp.rs  convert.rs  general.rs  locals.rs  math.rs  mod.rs  push_const.rs  stack.rs
rust_jvm/src/instruction_old/: array.rs  class.rs  general.rs  macros.rs  mod.rs  push_const.rs
rust_jvm/src/jvm/: hooks.rs  mod.rs  thread.rs
rust_jvm/src/jvm/call/: callstack_trace.rs  ffi.rs  interface.rs  interpreter.rs  mod.rs  native.rs
rust_jvm/src/jvm/interface/: mod.rs
rust_jvm/src/jvm/internals/: java_unsafe.rs  method_handles.rs  mod.rs  reflection.rs
rust_jvm/src/jvm/mem/: ffi.rs  gc.rs  handle.rs  mod.rs  raw.rs  schema.rs  string.rs  types.rs
rust_jvm/src/stack/: checked.rs  mod.rs  unchecked.rs
rust_jvm/src/util/: arc_slice.rs  mod.rs
simple_gc/: Cargo.toml
simple_gc/src/: jdk_fork.rs  lib.rs
src/: class.rs  constant_pool.rs  jar.rs  main.rs  types.rs  version.rs
src/attribute/: mod.rs
src/instruction/: array.rs  class.rs  cmp.rs  convert.rs  general.rs  load_store.rs  locals.rs  macros.rs  math.rs  mod.rs  push_const.rs  stack.rs
src/jvm/: bindings.rs  exec.asm  exec.rs  hooks.rs  interface.rs  mem.rs  mem_rewrite.rs  mod.rs  stack.rs  test.c
src/jvm/call/: interface.rs  interpreter.rs  native.rs
src/jvm/internals/: java_unsafe.rs  mod.rs  reflection.rs  system.rs
src/jvm/mem/: handle.rs  mod.rs  raw.rs  schema.rs  types.rs
