[package]
name = "class_format"
version = "0.1.0"
edition = "2021"


[dependencies]
byteorder = "1.4.3"
num-derive = "0.3"
num-traits = "0.2"
jni-sys = "0.3.0"
cesu8 = "1.1.0"
bitflags = "1.3.2"
zip = "0.5.12"
walkdir = "2.3.2"


[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_trace", "std", "serde"]
