[package]
name = "java"
version = "0.1.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2018"

#[features]
#default = ["clap/clap_derive"]

[dependencies]
jvm = { path = "../jvm" }

#clap = "2.33"
pretty_env_logger = "0.4.0"
log = "0.4.14"
#clap = "3.0.0-beta.2"
shell-words = "1.0.0"
