[package]
name = "java"
version = "0.1.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2018"

[features]
default = []
profile = []
#profile = ["jvm/profile"]


[dependencies]
libloading = "0.7.0"
jni = "0.19.0"

#jvm = { path = "../jvm" }

pretty_env_logger = "0.4.0"
log = "0.4.14"
shell-words = "1.0.0"
hashbrown = "0.11.2"
glob = "0.3.0"

[build-dependencies]
java_std = {path = "../java_std"}
