[package]
name = "rust_jvm"
version = "0.2.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2018"

[lib]
name = "jvm"
crate-type = ["cdylib"]

[features]
default = ["tempfile"]
profile = ["tempfile", "thread_profiler"]
priority = ["thread-priority", "crossbeam-channel"]
callstack = ["serde_json"]
debug = []

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2"
bitflags = "1.2"
hashbrown = "0.11.2"
zip = "0.5.12"
sha2 = "0.9.5"
base64 = "0.13.0"
simplelog = "0.10.0"
walkdir = "2.3.2"
libloading = "0.7.0"
libffi = "1.0.1"
jni = "0.19.0"
lazy_static = "1.4.0"
parking_lot = "0.11.2"
gc = "0.4.1"
#users = "0.11.0"
home = "0.5.3"
libc = "0.2.101"
whoami = "1.1.3"

[dependencies.serde_json]
version = "1.0.67"
optional = true

[dependencies.thread-priority]
version = "0.2.4"
optional = true

[dependencies.thread_profiler]
version = "0.3"
optional = true

[dependencies.crossbeam-channel]
version = "0.5.1"
optional = true

[dependencies.tempfile]
version = "3.2.0"
optional = true

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_debug", "std", "serde"]

[build-dependencies]
walkdir = "2.3.2"