[package]
name = "rust_jvm"
version = "0.3.1"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2018"

[lib]
name = "jvm"
crate-type = ["cdylib", "rlib"]

[features]
default = []
profile = ["thread_profiler"]
priority = ["thread-priority", "crossbeam-channel"]
callstack = ["serde_json"]
quiet = []
debug = []
llvm = ["inkwell", "llvm-sys"]

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2"
bitflags = "1.2"
zip = "0.5.12"
sha2 = "0.9.5"
base64 = "0.13.0"
simplelog = "0.10.0"
walkdir = "2.3.2"
libloading = "0.7.0"
libffi = "1.0.1"
jni = "0.19.0"
lazy_static = "1.4.0"
parking_lot = "0.11.2"
home = "0.5.3"
libc = "0.2.101"
whoami = "1.1.3"
num_cpus = "1.13.0"
page_size = "0.4.2"
slice-dst = "1.5.1"
memoffset = "0.6.4"
cesu8 = "1.1.0"

class_format = { path = "../class_format" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "winsock2"] }

[dependencies.serde_json]
version = "1.0.67"
optional = true

[dependencies.thread-priority]
version = "0.2.4"
optional = true

[dependencies.thread_profiler]
version = "0.3"
optional = true

[dependencies.crossbeam-channel]
version = "0.5.1"
optional = true

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_trace", "std", "serde"]

[build-dependencies]
walkdir = "2.3.2"
cc = "1.0"


[dependencies.inkwell]
version = "0.1.0-beta.4"
features = ["llvm12-0"]
optional = true

[dependencies.llvm-sys]
version = "120.2.1"
optional = true


